Filtramos segun las categorias

--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,4 +1,9 @@
 .menuProvisorio{
     display: flex;
     justify-content: space-around;
+    background-color: aqua;
+}
+
+.menuProvisorio a{
+    text-decoration: none;
 }
