Agregando los componentes y funciones para la segunda pre-entrega

--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -2,8 +2,14 @@
     display: flex;
     justify-content: space-around;
     background-color: aqua;
+    align-items: center
 }
 
 .menuProvisorio a{
     text-decoration: none;
+    color: black;
+    font-weight: 800;
+}
+.menuProvisorio a:hover{
+    color: crimson;
 }
