--- a/src/components/ItemList/itemList.css
+++ b/src/components/ItemList/itemList.css
@@ -1,10 +1,23 @@
+.container{
+    width: 100%;
+}
 .container img {
     height: 180px;
     width: 100%;
+    
+}
+.container h3{
+    margin: 50px;
+    font-size: 3em;
 }
 .fila{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap:wrap;
+    margin: 20px;
+    margin-top: 20px;
+}
+.card{
+    margin-top: 20px;
 }
